--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.formatting.provider": "autopep8"
+    "python.formatting.provider": "autopep8",
+    "python.pythonPath": "/Users/j-hashimoto/.local/share/virtualenvs/django-test-tutorial-PokfW6z_/bin/python"
 }
